RESOLVED FIXED189915
[GTK][WPE] Compositing indicators are not working
https://bugs.webkit.org/show_bug.cgi?id=189915
Summary [GTK][WPE] Compositing indicators are not working
Miguel Gomez
Reported 2018-09-24 07:35:52 PDT
They are not drawn when are enabled.
Attachments
Patch (1.97 KB, patch)
2018-09-24 07:38 PDT, Miguel Gomez
no flags
Miguel Gomez
Comment 1 2018-09-24 07:38:19 PDT
WebKit Commit Bot
Comment 2 2018-09-24 08:47:28 PDT
Comment on attachment 350639 [details] Patch Clearing flags on attachment: 350639 Committed r236401: <https://trac.webkit.org/changeset/236401>
WebKit Commit Bot
Comment 3 2018-09-24 08:47:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.