[GTK][WPE] Compositing indicators are not working https://bugs.webkit.org/show_bug.cgi?id=189915

Reviewed by Žan Doberšek.

Pass the debugBorder and repaintCount parameters to the TextureMapperLayer when required.

* Shared/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:
(WebKit::CoordinatedGraphicsScene::updateSceneState):


Canonical link: https://commits.webkit.org/204853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236401 268f45cc-cd09-0410-ab3c-d52691b4dbfc